Get daemon.json.

--- a/.azuredevops/build.yml
+++ b/.azuredevops/build.yml
@@ -18,7 +18,9 @@ jobs:
       - powershell: dotnet tool restore
         displayName: .NET Tool Restore
 
-      - powershell: sudo dockerd --tlsverify --tlscacert=ca.pem --tlscert=server-cert.pem --tlskey=server-key.pem -H=localhost:2376
+      - powershell: |
+          cat /etc/docker/daemon.json
+          sudo dockerd --tlsverify --tlscacert=ca.pem --tlscert=server-cert.pem --tlskey=server-key.pem -H=localhost:2376
         displayName: Expose Docker Daemon Tls Endpoint
 
       - powershell: dotnet cake --target=Restore-NuGet-Packages
